# libmediadevice

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  media_device.cc  media_device.h
audio/: pulse_audio_device.cc  pulse_audio_device.h  wasapi_audio_device.cc  wasapi_audio_device.h
examples/: CMakeLists.txt  README.md  dxgi_video_sample.cc  nvfbc_video_sample.cc  pulse_audio_sample.cc  wasapi_audio_sample.cc  x11_video_sample.cc
video/: dxgi_video_device.cc  dxgi_video_device.h  nvfbc_video_device.cc  nvfbc_video_device.h  x11_video_device.cc  x11_video_device.h
